# testing-libpmem

./: .gitignore  Makefile.am  configure.ac
src/: fast-memcpy-inl.h
test/: .gitignore  Makefile.am  blk.c  checkplus.h  log.c  perf.c  pmem.c  run_perftest  setup_test  test_blk  test_fast_memcpy.c  test_libpmem.c  test_libpmemlog.c  test_log  test_pmem
